fix NewCollections format has to reformat ShopCategory to align

--- a/frontend/src/Components/NewCollections/NewCollections.css
+++ b/frontend/src/Components/NewCollections/NewCollections.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
-    height: 90vh;
+    gap: 20px;
+    margin-bottom: 100px;
 }
 
 .new-collections h1 {
@@ -21,7 +21,7 @@
 
 .collections {
     display: grid;
-    grid-template-columns: 1hr 1hr 1hr 1hr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     margin-top: 50px;
     gap: 30px;
 }
